--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "callback-server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "An extremely simple callback server",
   "main": "index.js",
   "scripts": {
@@ -23,6 +23,7 @@
   },
   "homepage": "https://github.com/SpoonX/callback-server#readme",
   "dependencies": {
-    "forever": "^0.15.1"
+    "forever": "^0.15.1",
+    "subtext": "^2.0.1"
   }
 }
